[gd_scene load_steps=4 format=3 uid="uid://dt25rk7gid8tt"]

[ext_resource type="Texture2D" uid="uid://c7l10ukajeftu" path="res://theknight.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://bpueptsdhm6hc" path="res://scenes/hitbox.gd" id="1_md0e3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7p1mj"]
radius = 18.0
height = 72.0

[node name="enemy" type="Node2D" groups=["enemy"]]

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
position = Vector2(7, -6)
collision_mask = 2
script = ExtResource("1_md0e3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_7p1mj")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(0.99999905, -11)
scale = Vector2(0.34046963, 0.34046966)
texture = ExtResource("1_7p1mj")

[node name="DamageTimer" type="Timer" parent="Area2D"]
one_shot = true

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="timeout" from="Area2D/DamageTimer" to="Area2D" method="_on_damage_timer_timeout"]
